ensure alignment matches non stacked nouns

--- a/packages/nouns-webapp/src/components/StackedCircleNouns/StackedCircleNouns.module.css
+++ b/packages/nouns-webapp/src/components/StackedCircleNouns/StackedCircleNouns.module.css
@@ -1,6 +1,8 @@
 .wrapper {
     display: flex;
     position: relative;
+    height: fit-content;
+    width: fit-content;
 }
 
 .nounWrapper {
